Fix vercel.json: Remove routes/builds conflict with rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/validate-user",
-      "dest": "/api/validate-user.js"
-    },
-    {
-      "src": "/api/emergency-alert",
-      "dest": "/api/emergency-alert.js"
-    },
-    {
-      "src": "/api/alerts",
-      "dest": "/api/alerts.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
   "rewrites": [
     { "source": "/", "destination": "/public/index.html" },
-    { "source": "/admin", "destination": "/public/admin.html" }
+    { "source": "/admin", "destination": "/public/admin.html" },
+    { "source": "/api/(.*)", "destination": "/api/$1" }
   ]
 }
