--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vercel dev",
     "deploy": "vercel --prod"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@vercel/kv": "^1.0.1"
+  },
   "devDependencies": {},
   "engines": {
     "node": ">=14.x"
